; ModuleID = '/home/carl/AnghaBench/TDengine/src/modules/http/src/extr_httpSql.c_httpProcessLoginCmd.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/modules/http/src/extr_httpSql.c_httpProcessLoginCmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, i32, i32 }

@HTTP_GEN_TAOSD_TOKEN_ERR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [67 x i8] c"context:%p, fd:%d, ip:%s, user:%s, login via http, return token:%s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @httpProcessLoginCmd(%struct.TYPE_7__* %0) #0 {
  %2 = alloca %struct.TYPE_7__*, align 8
  %3 = alloca [128 x i8], align 16
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %2, align 8
  %4 = bitcast [128 x i8]* %3 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 16 %4, i8 0, i64 128, i1 false)
  %5 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %6 = getelementptr inbounds [128 x i8], [128 x i8]* %3, i64 0, i64 0
  %7 = call i32 @httpGenTaosdAuthToken(%struct.TYPE_7__* %5, i8* %6, i32 128)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %13, label %9

9:                                                ; preds = %1
  %10 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %11 = load i32, i32* @HTTP_GEN_TAOSD_TOKEN_ERR, align 4
  %12 = call i32 @httpSendErrorResp(%struct.TYPE_7__* %10, i32 %11)
  br label %29

13:                                               ; preds = %1
  %14 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %15 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %16 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %15, i32 0, i32 2
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %19 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %22 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = getelementptr inbounds [128 x i8], [128 x i8]* %3, i64 0, i64 0
  %25 = call i32 @httpTrace(i8* getelementptr inbounds ([67 x i8], [67 x i8]* @.str, i64 0, i64 0), %struct.TYPE_7__* %14, i32 %17, i32 %20, i32 %23, i8* %24)
  %26 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %27 = getelementptr inbounds [128 x i8], [128 x i8]* %3, i64 0, i64 0
  %28 = call i32 @httpSendSuccResp(%struct.TYPE_7__* %26, i8* %27)
  br label %29

29:                                               ; preds = %13, %9
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @httpGenTaosdAuthToken(%struct.TYPE_7__*, i8*, i32) #2

declare dso_local i32 @httpSendErrorResp(%struct.TYPE_7__*, i32) #2

declare dso_local i32 @httpTrace(i8*, %struct.TYPE_7__*, i32, i32, i32, i8*) #2

declare dso_local i32 @httpSendSuccResp(%struct.TYPE_7__*, i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
